--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900,900italic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da" rel="stylesheet">
-    <script src="js/jquery-1.12.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -103,7 +101,7 @@
   <div class="row">
     <div class="col-md_12">
       <h5>
-          Website created by Marija Robinson, using a modified version of Udacity's mockup provided for the Second Project in the Full Stack Nanodegree.
+          Website created by Marija Robinson, using a modified version of Udacity's mockup provided for the Second Project in the Full Stack Nanodegree.  Hosted on Google Drive.
       </h5>
     </div>
   </div>
@@ -204,5 +202,8 @@
         </div>
       </div>
     </div>
+    <!--note, there is some debate about where this should go and if you should use an async ?attribute?. Google "where to put javascript <script> tag in html page"-->
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
